--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
 
       - name: Run all specs
         env: # define secrets in Github project -> settings -> secrets
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           DB_FILENAME: ${{ secrets.DB_FILENAME }}
-          REPOSTORE_PATH: ${{ secrets.REPOSTORE_PATH }}
-          API_HOST: ${{ secrets.API_HOST }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GOOGLE_CLOUD_API_TOKEN: ${{ secrets.GOOGLE_CLOUD_API_TOKEN }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
         run: bundle exec rake spec
