--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,49 @@
-# API testing workflow config for CI/CD on Github
-
 name: API continuous integration
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow for main branch on git push
   push:
     branches: [main]
-  # Triggers workflow for or any branch on pull requests
   pull_request:
-    branches:
-      - '**'
-  # Allows running this workflow manually from the Actions tab
+    branches: ["**"]
   workflow_dispatch:
 
-# A workflow is defined of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "api_test"
   api_test:
     strategy:
-      # don't cancel other jobs if one fails
       fail-fast: false
       matrix:
-        os: [ubuntu, macos]
-    runs-on: ${{ matrix.os }}-latest  # Runs on latest builds of matrix OSes
+        os: [ubuntu]
+        ruby: ["3.3.5"]
+
+    runs-on: ${{ matrix.os }}-latest
+
     env:
-      BUNDLE_WITHOUT: production # skip installing production gem (pg)
-    # Steps represent a sequence of tasks that will be executed as part of the job
+      BUNDLE_WITHOUT: production
+      RACK_ENV: test
+      DATABASE_URL: sqlite://db/local/test.db
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-    
-      # Builds on a predefined action that has Ruby installed 
+
       - uses: ruby/setup-ruby@v1
         with:
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+
+      - name: Create database directory
+        run: |
+          mkdir -p db/local
+          touch db/local/test.db
 
       - name: Setup test database
-        env: # define secrets in Github project -> settings -> secrets
-            DB_FILENAME: ${{ secrets.DB_FILENAME }}
-        run: RACK_ENV=test bundle exec rake db:migrate
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GOOGLE_CLOUD_API_TOKEN: ${{ secrets.GOOGLE_CLOUD_API_TOKEN }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+        run: bundle exec rake db:migrate
 
       - name: Run all specs
-        env: # define secrets in Github project -> settings -> secrets
-          DB_FILENAME: ${{ secrets.DB_FILENAME }}
+        env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GOOGLE_CLOUD_API_TOKEN: ${{ secrets.GOOGLE_CLOUD_API_TOKEN }}
           SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
