--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: API continuous integration
-
 on:
   push:
     branches: [main]
@@ -12,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu, macos]
+        os: [ubuntu]
         ruby: ["3.3.5"]
 
     runs-on: ${{ matrix.os }}-latest
@@ -21,6 +20,9 @@ jobs:
       BUNDLE_WITHOUT: production
       RACK_ENV: test
       DATABASE_URL: sqlite://db/local/test.db
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      GOOGLE_CLOUD_API_TOKEN: ${{ secrets.GOOGLE_CLOUD_API_TOKEN }}
+      SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
 
     steps:
       - uses: actions/checkout@v4
@@ -38,27 +40,15 @@ jobs:
       - name: Create secrets.yml
         run: |
           mkdir -p config
-          cat > config/secrets.yml << EOL
-          ---
-          test:
-            DB_FILENAME: db/local/test.db
-            OPENAI_API_KEY: |
-              ${{ secrets.OPENAI_API_KEY }}
-            GOOGLE_CLOUD_API_TOKEN: |
-              ${{ secrets.GOOGLE_CLOUD_API_TOKEN }}
-            SESSION_SECRET: |
-              ${{ secrets.SESSION_SECRET }}
-          EOL
+          echo "---" > config/secrets.yml
+          echo "test:" >> config/secrets.yml
+          echo "  DB_FILENAME: db/local/test.db" >> config/secrets.yml
+          echo "  OPENAI_API_KEY: \"$OPENAI_API_KEY\"" >> config/secrets.yml
+          echo "  GOOGLE_CLOUD_API_TOKEN: \"$GOOGLE_CLOUD_API_TOKEN\"" >> config/secrets.yml
+          echo "  SESSION_SECRET: \"$SESSION_SECRET\"" >> config/secrets.yml
 
       - name: Setup test database
         run: bundle exec rake db:migrate
 
-      - name: Run specs
-        env:
-          SPEC_OPTS: --backtrace
-        run: |
-          if [ "${{ matrix.os }}" = "macos" ]; then
-            bundle exec rake spec_unit spec_acceptance
-          else
-            bundle exec rake spec
-          fi
+      - name: Run all specs
+        run: bundle exec rake spec
