set up Parallelism

--- a/config/secrets-example.yml
+++ b/config/secrets-example.yml
@@ -1,17 +1,32 @@
 ---
 development:
   DB_FILENAME: db/local/dev.db
-  OPENAI_API_KEY: "your-api-key"
-  GOOGLE_CLOUD_API_TOKEN: "your-api-key"
-  SESSION_SECRET: "your session secret key"
+  OPENAI_API_KEY: <your api key>
+  GOOGLE_CLOUD_API_TOKEN: <your api key>
+  SESSION_SECRET: <your session secret key>
+  AWS_ACCESS_KEY_ID: <your access key id>
+  AWS_SECRET_ACCESS_KEY: <your secret access key>
+  AWS_REGION: <choose aws region> # e.g., 'us-east-1'
+  CLONE_QUEUE: meal-decoder-clone-development
+  CLONE_QUEUE_URL: <set by AWS>
 
 test:
   DB_FILENAME: db/local/test.db
-  OPENAI_API_KEY: "your-api-key"
-  GOOGLE_CLOUD_API_TOKEN: "your-api-key"
-  SESSION_SECRET: "your session secret key"
+  OPENAI_API_KEY: <your api key>
+  GOOGLE_CLOUD_API_TOKEN: <your api key>
+  SESSION_SECRET: <your session secret key>
+  AWS_ACCESS_KEY_ID: <your access key id>
+  AWS_SECRET_ACCESS_KEY: <your secret access key>
+  AWS_REGION: <choose aws region> # e.g., 'us-east-1'
+  CLONE_QUEUE: meal-decoder-clone-development
+  CLONE_QUEUE_URL: <set by AWS>
 
 production:
-  OPENAI_API_KEY: "your-api-key"
-  GOOGLE_CLOUD_API_TOKEN: "your-api-key"
-  SESSION_SECRET: "your session secret key"
+  OPENAI_API_KEY: <your api key>
+  GOOGLE_CLOUD_API_TOKEN: <your api key>
+  SESSION_SECRET: <your session secret key>
+  AWS_ACCESS_KEY_ID: <your access key id>
+  AWS_SECRET_ACCESS_KEY: <your secret access key>
+  AWS_REGION: <choose aws region> # e.g., 'us-east-1'
+  CLONE_QUEUE: meal-decoder-clone-development
+  CLONE_QUEUE_URL: <set by AWS>
