--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
     strategy:
       # don't cancel other jobs if one fails
       fail-fast: false
+      # maximum number of jobs that can run simultaneously
+      max-parallel: 1
       matrix:
         os: [ubuntu, macos]
     runs-on: ${{ matrix.os }}-latest # Runs on latest builds of matrix OSes
@@ -47,10 +49,17 @@ jobs:
             OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
             GOOGLE_CLOUD_API_TOKEN: ${{ secrets.GOOGLE_CLOUD_API_TOKEN }}
             SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+            CLONE_QUEUE: ${{ secrets.CLONE_QUEUE }}
+            CLONE_QUEUE_URL: ${{ secrets.CLONE_QUEUE_URL }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           EOL
 
       - name: Setup test database
         run: bundle exec rake db:migrate
 
       - name: Run all specs
-        run: bundle exec rake spec
+        run: |
+          rake worker:run:test &
+          bundle exec rake spec
