--- a/workers/shoryuken_test.yml
+++ b/workers/shoryuken_test.yml
@@ -1,2 +1,4 @@
+concurrency: 1
+delay: 0
 queues:
-  - https://sqs.ap-northeast-1.amazonaws.com/225989340162/meal-decoder-clone-test
+  - ['meal-decoder-clone-test', 1]
