--- a/config/secrets-example.yml
+++ b/config/secrets-example.yml
@@ -9,6 +9,7 @@ development:
   AWS_REGION: <choose aws region> # e.g., 'us-east-1'
   CLONE_QUEUE: meal-decoder-clone-development
   CLONE_QUEUE_URL: <set by AWS>
+  API_HOST: <your api host url>
 
 test:
   DB_FILENAME: db/local/test.db
@@ -20,6 +21,7 @@ test:
   AWS_REGION: <choose aws region> # e.g., 'us-east-1'
   CLONE_QUEUE: meal-decoder-clone-development
   CLONE_QUEUE_URL: <set by AWS>
+  API_HOST: <your api host url>
 
 production:
   OPENAI_API_KEY: <your api key>
@@ -30,3 +32,4 @@ production:
   AWS_REGION: <choose aws region> # e.g., 'us-east-1'
   CLONE_QUEUE: meal-decoder-clone-development
   CLONE_QUEUE_URL: <set by AWS>
+  API_HOST: <your api host url>
